--- a/index.html
+++ b/index.html
@@ -646,12 +646,12 @@
 						<li>
 						<i class="fas fa-phone"></i>
 							Call Us
-						<a href="tel:+61 415429494"><span class="pt-10">+61 415429494</span> </a>
+						<a href="tel:+61 452458189"><span class="pt-10">+61 452458189</span> </a>
 						</li>
 						<li>
 							<i class="fas fa-map-marker-alt"></i>
 							Address
-							<span class="pt-10">51 Cinderella Dr, Springwood QLD 4127</span>
+							<span class="pt-10">50 Miller St, Chermside QLD 4032</span>
 						</li>
 						<li>
 							<i class="fas fa-envelope-open"></i>
